--- a/components.json
+++ b/components.json
@@ -4,14 +4,14 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "./",
-    "css": "src/app.css",
+    "config": "tailwind.config.js",
+    "css": "src/index.css",
     "baseColor": "slate",
     "cssVariables": false,
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils"
+    "components": "/src/components",
+    "utils": "/src/lib"
   }
 }
